# rust-micro-cms

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  init_db.sql  mydatabase.db  mydatabase.db-journal  posts.db  tarpaulin-report.html
archived_versions/micro-cms-v0.5/src/: db.rs  main.rs
archived_versions/micro-cms-v0.6/: .env
archived_versions/micro-cms-v0.6/src/: main.rs
archived_versions/micro-cms-v0.6/src/controllers/: authors.rs
archived_versions/micro-cms-v0.6/src/db/: connection.rs  mod.rs
archived_versions/micro-cms-v0.6/src/models/: authors.rs  (+2 more)
backend/: Cargo.toml  README.md
backend/src/: api.rs  main.rs
backend/src/db/: mod.rs
front-end/: Cargo.toml  README.md  index.html  index.scss
front-end/src/: api.rs  app.rs  errors.rs  main.rs  routes.rs  styling.rs
front-end/src/handlers/: mod.rs  nav.rs  posts.rs  routes.rs  site_info.rs  styling.rs  use_state.rs
front-end/src/models/: mod.rs  nav.rs  posts.rs  styling.rs
front-end/src/views/: mod.rs  nav_bar.rs  styling.rs
front-end/src/views/nav/: delete_nav_item.rs  edit_nav_bar.rs  mod.rs  nav_bar.rs  new_nav_item.rs  update_nav_item.rs
front-end/src/views/posts/: all_posts.rs  mod.rs  new_post.rs  recent_posts.rs  single_post.rs  update_post.rs
front-end/src/views/styling/: mod.rs  styling.rs  update_styling.rs
frontend/: Cargo.toml  README.md  index.html
frontend/src/: api.rs  lib.rs  main.rs  routes.rs
frontend/src/routes/: nav.rs  posts.rs
micro_cms_framework/: Cargo.toml  post.db
micro_cms_framework/src/: main.rs
new_src/: Cargo.toml
new_src/rust-micro-cms/: Cargo.toml
new_src/server-side-render/: Cargo.toml
new_struct/src/: main.rs
new_struct/src/models/: authors.rs  mod.rs  posts.rs
rust-micro-cms/: .env  Cargo.toml  README.md  app_db.sqlite  mydatabase  mydatabase.sqlite
rust-micro-cms/.sqlx/: query-04d81c508e0981c2886e2c3eb5d383a4f405284731a3467e05fbeab9a1d42ada.json  query-10c2af0548f5b01ccfcc73ac5b48828060e92bb38857e4335caadd8b65c8dc81.json  query-397d426e1cdb6a142af7d3131e0457f74df6b35fb16de2a42899092adc0cb02a.json  query-486e69f8761f4d7916a0e6e1618772f3b8e158a2ad774660aed967360eb09265.json  query-4f17c842c8407460631eca641dd51a5700463ba3d51a440c4fdaef2b9b9a87fe.json  query-6605cf117fed87edacf61b2474ec8a8a5c4e5a7b2980ebc477ec5d3bcab22ee0.json  query-7ef6ddb1620cc215dbc92a17001295e02a37704ee6b3cf2bc88bdf7ab6663830.json  query-8885781d1b15a40b9a8d6670cc0a9973ebe6e3b863232003e95572c632647a19.json  query-9e79e8290e2afe4812b4b78e27cca1d365281fea61f90107bd41fdc045312604.json  query-aa7b694e95a29135311c834e4b6a00dfbef02fbc25c644d330ec5896222274b7.json  query-b6019471ff1989ef2f0658b0b34e683fdc706751e2bb69043544c9a4d08b5ba0.json  query-cc05f926ab25ef5045ec5f180373debdd0e894c22b603541f9b62f35de0b24d8.json  query-d7948c85c77db22ca6f79b2799c0c2982de00ff5f7703407dd522ea8abcc8ca6.json  query-d7d92b82d3bbfd2677e1f2e07488f245f2cef220401407a673dce18beb48dece.json  query-e147c648ff68a06388663b7e6d378adac6201111062745ea31332bd4f704b80b.json  query-e4ce5ec769ebebf51205a35cfbb2c58cbd8d5879fc287a1ae73f7d6ab5e6d476.json  query-f0210397636c1cd984990d0a5a329a8060b239fed23c962718c3c9a35d429bd1.json  query-f3c837525dbc7736d869f38f150520629bfce57d9dd1ab94e8042eac1831d9f0.json  query-f981f19da3798c0a6ca886819b15bdc2fb84d60aa394aa23de463b13e7c1d368.json
rust-micro-cms/migrations/: 20240405131835_create_initial_schema.sql
rust-micro-cms/src/: errors.rs  main.rs  routes.rs  state.rs
rust-micro-cms/src/database/: authors.rs  mod.rs  nav.rs  posts.rs  site_info.rs  styling.rs
rust-micro-cms/src/handlers/: authors.rs  mod.rs  nav.rs  posts.rs  styling.rs
rust-micro-cms/src/models/: authors.rs  mod.rs  nav.rs  posts.rs  site_info.rs  styling.rs
server-side-render/src/: model.rs
src/: api.rs  axum-cooking.rs  db-testing.rs  db.rs  db_lib.rs  errors.rs  handler.rs  main.rs  render.rs  server.rs  server_lib.rs
src/controllers/: authors.rs  mod.rs  posts.rs
src/db/: authors.rs  connection.rs  posts.rs
src/models/: authors.rs  posts.rs
src/services/: authors.rs  posts.rs
src/ssr/: author_ssr.rs  mod.rs  posts_ssr.rs
src/ssr/controller/: author_ssr.rs
src/ssr/view/: post_form.html
(+4 files in other folders)
