[package]
name = "rust-micro-cms"
version = "0.6.1"
edition = "2021"
authors = ["Alex Blood"]

[dependencies]
anyhow = "1.0.79"
axum = "0.7.4"
chrono = "0.4.34"
dotenv = "0.15.0"
serde = "1.0.196"
sqlx = { version = "0.7.3", features = ["runtime-tokio","sqlite"] }
tokio = { version = "1.36.0", features = ["full"]}
