[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono.workspace = true
reqwest = { version = "0.12.4", features = ["json"] }
serde = { workspace = true, features = ["derive"] }
web-sys = "0.3.69"
yew = { version="0.20", features=["csr"] }
