[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
authors = ["Alex Blood"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
leptos = { version = "0.5.2", features = ["csr", "nightly"] }
yew = {version = "0.21.0", features = ["csr"]}
