[package]
name = "rust-micro-cms"
version = "0.6.1"
edition = "2021"
authors = ["Alex Blood"]

[dependencies]
axum = { workspace = true, features = ["macros"] }
chrono = { workspace = true }
dotenv = "0.15.0"
serde = { workspace = true }
serde_json = { workspace = true }
simple-log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-rusqlite = "0.5.1"

